# mergelife

./: .gitignore  README.md  binaries.md  mergelife-python.code-workspace  mergelife.js  package-lock.json
.github/workflows/: ci.yml
c/: Makefile  README.md  rules-found.txt
c/src/: ca.c  eval.c  main.c  mergelife.h  objective.c  search.c  search.h  stats.c
c/test/: conformance.c  verify.c
conformance/: README.md  gen_vectors.py  vectors.txt
data/: heaton_ca_icon.icns  heaton_ca_icon.psd
java/evolve/: README.md  build.gradle  paperObjective.json  settings.gradle
java/evolve/src/examples/java/org/heatonresearch/mergelife/examples/: Example.java
java/evolve/src/main/java/org/heatonresearch/mergelife/: BasicObjectiveFunction.java  CalculateObjectiveStats.java  EvaluateObjective.java  MergeLife.java  MergeLifeConfig.java  MergeLifeException.java  MergeLifeGeneticAlgorithm.java  MergeLifeGenome.java  MergeLifeGrid.java  MergeLifeReportable.java  MergeLifeRule.java  ObjectiveFunction.java  VisualizeGridImage.java
java/evolve/src/main/java/org/heatonresearch/mergelife/util/: LargestRect.java
java/evolve/src/test/java/org/heatonresearch/util/: TestBasicObjectiveFunction.java  TestCalculateObjectiveStats.java  TestConformance.java  TestLargestRect.java  TestMergeLife.java  TestMergeLifeConfig.java  TestMergeLifeGeneticAlgorithm.java  TestMergeLifeGenome.java  TestMergeLifeGrid.java  TestMergeLifeRule.java
java/evolve/src/test/resources/: config1.json  config2.json  config3.json  config4.json  config5.json  config6.json  quickConfig.json
js/: README.md
js/mergelife-lib/: .babelrc  README.md  eslint.config.js  package-lock.json  package.json
js/mergelife-lib/lib/: mergelife-evolve.js  mergelife-evolve.js.map  mergelife.js  mergelife.js.map
js/mergelife-lib/src/: mergelife-evolve.js  mergelife.js
js/mergelife-lib/test/: test-conformance.js  test-evolve.js  test-largestrect.js  test-mergelife.js
js/mergelife-lib/test/resources/: config1.json  config6.json
js/mergelife-util/: mergelife-util.js  mergelife.js  package-lock.json  package.json  paperObjective.json
js/ml-runner/: ml-runner.css  ml-runner.js  test.html
js/ml-runner/js/: ml-plugin.js
js/viewer-web/: mergelife-viewer.html
js/viewer-web/js/: mergelife-viewer.js  mergelife.js  mergelife.js.map
js/web/: .eslintrc  README.md  mergelife-evolve.js  mergelife-util.js  mergelife-viewer.css  mergelife-viewer.html  mergelife-viewer.js  mergelife.js  package-lock.json  package.json
js/web-full-screen/: ml-fullscreen.html  ml-fullscreen2.css  ml-fullscreen2.html  ml-fullscreen2.js
js/web/test/: test-ca.js  test-evolve.js  test-largestrect.js  test-mergelife.js
js/web/test/resources/: config5.json
python/: README.md  dp.py  eval_client.py  eval_service.py  eval_services.py  go.bat  largest_rect.py  mergelife.py  ml_capture.py  ml_evolve.py  ml_test_obj.py  ml_utility.py  ml_viewer.py  pyproject.toml  stop.bat  test_eval.py  test_eval_local.py
python/application/: build_all.sh  build_debug.sh
python/application/pyqt/: README.md  build.py  build.sh  const_values.py  entitlements.plist  heaton-ca-win.spec  heaton-ca.icns  heaton-ca.py  heaton-ca.spec  heaton_ca  heaton_ca.spec  heaton_ca_app.py  heaton_ca_icon.icns  heaton_ca_win.py  heatonca-privacy.md  mergelife.py  ml_evolve.py  requirements.txt  tab_about.py  tab_evolve.py  tab_gallery.py  tab_graphic.py  tab_rule.py  tab_settings.py  tab_simulate.py  tab_splash.py  utl_env.py  utl_logging.py  utl_settings.py
python/application/pyqt/deploy/macos/: build.sh  entitlements-nest.plist  entitlements.plist  go.sh  heaton-ca-macos.spec
python/application/pyqt/deploy/osx/: build.py  build.sh
python/application/pyqt/deploy/windows/: build.ps1  heaton-ca-windows.spec  heaton-ca.spec
python/application/pyqt/jth_ui/: app_jth.py  overlay.py  tab_graphic.py  tab_simulate.py  utl_classes.py  utl_env.py  utl_etc.py  utl_settings.py  window_jth.py
python/application/pyqt/mergelife/: dp.py  mergelife.py  ml_evolve.py
python/application/pyqt/tools/: generate_gallery.py
python/data/: obj_tests.csv
python/mergelife-lib/: .gitignore  LICENSE  README.md  pyproject.toml
python/mergelife-lib/examples/: README.md  pygame_viewer.py  render.py  train.py
python/mergelife-lib/src/mergelife/: __init__.py  dp.py  mergelife.py  ml_evolve.py
python/mergelife-lib/tests/: test_conformance.py  test_dp.py  test_engine.py  test_evolve.py
python/tests/: conftest.py  test_infrastructure.py
python/tests/unit/: test_mergelife.py
test-view/: index.html
