[tool.poetry]
name = "mergelife"
version = "1.0.0"
description = "Evolving Continuous Cellular Automata for Aesthetic Objectives"
authors = ["Jeff Heaton"]
readme = "README.md"
packages = [{include = "mergelife.py"}, {include = "dp.py"}, {include = "ml_evolve.py"}, {include = "ml_test_obj.py"}, {include = "ml_utility.py"}, {include = "ml_viewer.py"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
scipy = "^1.11.3"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.group.gui.dependencies]
pyinstaller = {version = "^6.7.0", optional = true}
pyqt6 = {version = "^6.7.0", optional = true}
opencv-python-headless = {version = "^4.9.0.80", optional = true}
appdirs = {version = "^1.4.4", optional = true}

[tool.poetry.scripts]
test = "pytest:main"
tests = "pytest:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "application/*",
    "data/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    ".tox/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"